apps/bleater-api-gateway/base/service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: bleater-api-gateway-canary
  namespace: bleater
spec:
  selector:
    app: bleater-api-gateway
    version: v2
  ports:
  - port: 80
    targetPort: 80
