apps/bleater-api-gateway/base/service-stable.yaml
apiVersion: v1
kind: Service
metadata:
  name: bleater-api-gateway
  namespace: bleater
spec:
  selector:
    app: bleater-api-gateway
    version: v1
  ports:
  - port: 80
    targetPort: 80
